--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"tailwindcss": "^3.4.1"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.13",
 		"eslint": "^8.57.0",
 		"eslint-plugin-astro": "^1.2.2",
 		"eslint-plugin-import": "^2.29.1",
