--- a/package.json
+++ b/package.json
@@ -19,22 +19,26 @@
 		"@astrojs/mdx": "^4.3.0",
 		"@astrojs/svelte": "^7.1.0",
 		"@astrojs/tailwind": "^5.1.5",
-		"astro": "^5.12.8",
+		"astro": "^5.12.9",
 		"lucide-svelte": "^0.396.0",
 		"tailwindcss": "^3.4.1"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.3.2",
+		"@eslint/eslintrc": "^3.3.1",
+		"@eslint/js": "^9.33.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"@types/node": "^22.5.0",
-		"eslint": "^8.57.0",
-		"eslint-plugin-astro": "^1.2.2",
-		"eslint-plugin-import": "^2.29.1",
-		"eslint-plugin-jsx-a11y": "^6.8.0",
-		"eslint-plugin-promise": "^6.2.0",
-		"eslint-plugin-svelte": "^2.40.0",
-		"prettier": "^3.3.2",
-		"prettier-plugin-astro": "^0.14.0",
-		"svelte": "^4.2.19",
+		"eslint": "^9.33.0",
+		"eslint-plugin-astro": "^1.3.1",
+		"eslint-plugin-import": "^2.32.0",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-promise": "^7.2.1",
+		"eslint-plugin-svelte": "^3.11.0",
+		"globals": "^16.3.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-astro": "^0.14.1",
+		"svelte": "^5.37.1",
 		"typescript": "^5.3.3"
 	}
 }
